display quiz title, display first question, display bullet points for choices

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
 <div class="container">
-  NOTHING TO SEE HERE!
+  <h1 id="quiz-name"></h1>
+  <h2 class='question'>this is a question</h2>
+  <ul class="possible-answers">
+    <li class='options' data-choice-id='1' >
+    </li>
+
+
+  </ul>
 </div>
+
