--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,7 +1,30 @@
-.container {
-  margin: 3em;
+@import url(http://fonts.googleapis.com/css?family=Della+Respira);
+
+html{
+  background-color: #44A483;
+
 }
 
+.container {
+  margin: 3em;
+  font-family: 'Della Respira', serif;
+  background-color: #ecf0f1;
+  padding: 2em;
+  border-radius: 1em;
+  color: #2c3e50;
+  box-shadow: 2px 1px 10px 2px rgba(119, 119, 119, 0.7);
+  -moz-box-shadow: 2px 1px 10px 2px rgba(119, 119, 119, 0.7);
+  -webkit-box-shadow: 2px 1px 10px 2px rgba(119, 119, 119, 0.7);
+  }
+
 h1#quiz-name {
-  color: red;
+
+}
+
+ul{
+  list-style: none;
+}
+
+li{
+  padding: .3em;
 }
