user can now see question and choices

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,15 @@
 .container {
   margin: 3em;
 }
+
+body {
+  background-color: #d3d3d3;
+}
+
+.quiz-title {
+  font-size: 50px;
+  color: gray;
+  font-family: Helvetica;
+  font-weight: bold;
+  text-align: center;
+}
