started over using js oo principles, add welcome message, display all quizzes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,7 +2,6 @@
 
 html{
   background-color: #44A483;
-
 }
 
 .container {
@@ -27,4 +26,9 @@ ul{
 
 li{
   padding: .3em;
+}
+
+h3{
+  display: none;
+  color: #2980b9;
 }
