--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,21 @@
 <div class="container">
-  NOTHING TO SEE HERE!
+  <div id="error" class="hidden"></div>
+  <div id="correct" class="hidden"></div>
+  <div id="listOfQuizzes">Quizzes!</div>
+  <div id="question"></div>
+</div>
+
+
+<div id="templates" class="hidden">
+  <div class="quiz"></div>
+  <div class="question">
+
+    <ul class="choices">
+
+
+    </ul>
+
+  </div>
+
+
 </div>
